components/crud-web-apps/secrets/manifests/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: secrets-web-app-secrets-web-app
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /secrets
    match:
    - uri:
        prefix: /secrets/
    rewrite:
      uri: /
    route:
    - destination:
        host: secrets-web-app-service.$(SWA_NAMESPACE).svc.$(SWA_CLUSTER_DOMAIN)
        port:
          number: 80
